# patentdoc

./: .dockerignore  .gitignore  Dockerfile  app.py  build_faiss_index.py  cpc_classifier.py  custom_llm.py  download_bigpatent.py  export_to_pdf.py  generate_background.py  generate_brief_description.py  generate_claims.py  generate_detailed_description.py  generate_field_of_invention.py  generate_objects.py  generate_summary.py  generate_summary_of_drawings.py  generate_title.py  match_drawings.py  patent_verifier.py  requirements.txt  save_bigpatent.py  test_custom_llm.py
data/: cpc_labels.json
datasets/big_patent/: big_patent.py
patent_draft/: README.md  pyproject.toml
patent_draft/src/patent_draft/: crew.py  main.py
