[project]
name = "patent_draft"
version = "0.1.0"
description = "Patent_draft using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0"
]

[project.scripts]
patent_draft = "patent_draft.main:run"
run_crew = "patent_draft.main:run"
train = "patent_draft.main:train"
replay = "patent_draft.main:replay"
test = "patent_draft.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
